--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
 <html>
 	<head></head>
-	<body></body>
+
+	<body>
+		<h1>GIT</h1>
+		<h2>Trabalhando com equipe com controle e segurança</h2>
+
+		<p>Um curso que explora .....</p>
+
+		<h3>Principais Benefícios:</h3>
+
+		<ul>
+			<li>Funciona de maneira distribuida</li>
+			<li>permite a edição concorrente de arquivos do projeto</li>
+			<li>Não depende de conexão ativa com Servidor</li>
+		</ul>
+	</body>
 </html>
