--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 		<h2>Trabalhando com equipe com controle e segurança</h2>
 
 		<p>Um curso que explora .....</p>
+		<p>Alterando o arquivo no exercico git commit -i</p>
 
-		<h3>Principais Benefícios:</h3>
+		<h3> Os Principais Benefícios são:</h3>
 
 		<ul>
 			<li>Funciona de maneira distribuida</li>
